@@ -69,5 +69,14 @@ if defined?(ActiveRecord::Base) && !NewRelic::Control.instance['skip_ar_instrume
   ActiveRecord::ConnectionAdapters::AbstractAdapter.module_eval do
     include ::NewRelic::Agent::Instrumentation::ActiveRecordInstrumentation
   end
-  
+
+  # This instrumentation will add an extra scope to the transaction traces
+  # which will show the code surrounding the query, inside the model find_by_sql
+  # method.
+  ActiveRecord::Base.class_eval do
+    class << self
+      add_method_tracer :find_by_sql, 'ActiveRecord/#{self.name}/find_by_sql', :metric => false
+    end
+  end
+ 
 end
