@@ -123,8 +123,7 @@ module NewRelic::Agent::Instrumentation
           
           agent.transaction_sampler.notice_transaction(path, request, local_params)
           
-          # for capturing per-controller cpu burn:
-          # t = Process.times.utime + Process.times.stime
+          t = Process.times.utime + Process.times.stime
           
           failed = false
           
@@ -139,10 +138,9 @@ module NewRelic::Agent::Instrumentation
             failed = true
             raise e
           ensure
-            # for capturing per-controller cpu burn:
-            # cpu_burn = (Process.times.utime + Process.times.stime) - t
-            # stats_engine.get_stats_no_scope("ControllerCPU/#{path}").record_data_point(cpu_burn)
-            # agent.transaction_sampler.notice_transaction_cpu_time(cpu_burn)
+            cpu_burn = (Process.times.utime + Process.times.stime) - t
+            stats_engine.get_stats_no_scope("ControllerCPU/#{path}").record_data_point(cpu_burn)
+            agent.transaction_sampler.notice_transaction_cpu_time(cpu_burn)
             
             # do the apdex bucketing
             #
